apps/opencloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-cloud
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3006
      targetPort: 3006
