apps/opencloud/slice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-cloud-slice
  labels:
    kubernetes.io/service-name: external-cloud
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 3006
endpoints:
  - addresses:
      - "192.168.31.214"
    conditions:
      ready: true
